# OpenSoundMixer2

./: .gitignore  CMakeLists.txt  README.md
scripts/: setup.py
src/: OpenSoundMixer.h  OpenSoundMixerInternal.h  osm.Manager.cpp  osm.Manager_Impl.cpp  osm.Manager_Impl.h  osm.ReferenceObject.h  osm.Sound_Impl.cpp  osm.Sound_Impl.h
src/Decorder/: osm.OggDecorder.cpp  osm.OggDecorder.h  osm.WaveDecorder.cpp
src/Filter/: osm.Panner.cpp
src/Manager/: osm.Manager_Impl_WasApi.cpp
test/: main.cpp
